tests/src/frontend/visibility/invalid/inherit_vis.sk
fun main(): void {
  print_string("OK")
}
base class X {
  overridable protected fun foo(): void {
    void
  }
}

class Y() extends X {
  private fun foo(): void {
    void
  }
}
